system_api: Add EIR property in bluetooth_device

This was added in crrev.com/c/1308457

BUG=chromium:887029,b:118334521
TEST=CQ

Change-Id: If80d8fc275e485f4f1db5d3c26e804b28aeaba5a
Reviewed-on: https://chromium-review.googlesource.com/1312382
Commit-Ready: ChromeOS CL Exonerator Bot <chromiumos-cl-exonerator@appspot.gserviceaccount.com>
Tested-by: Qiyu Hu <qiyuh@google.com>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Cr-Mirrored-From: https://chromium.googlesource.com/chromiumos/platform2
Cr-Mirrored-Commit: f7ec755ab30a72b8edb751703422f145b86549b0